--- a/fxbxstyle.css
+++ b/fxbxstyle.css
@@ -1,7 +1,22 @@
 body {
+
+    background-position: center center;
+    background-repeat: repeat;
+    background-size: cover;
+    background-image: url(Gemini_Generated_Image_es0lxres0lxres0l.jpg);
     color:indigo;
-    background-color: black;
+    animation: warp 20s infinite alternate;
+    background-color: darkmagenta;
+    background-blend-mode:burn;
     font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+@keyframes warp {
+    0% {
+      background-color: blue;
+    }
+    100% {
+      background-color: red;
+    }
 }
 section {
     background-color:mediumpurple;
@@ -51,5 +66,5 @@ button {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  background-image: ;
+  background-image: url(Gemini_Generated_Image_es0lxres0lxres0l.jpg);
 }
